--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,25 @@
 body{
-    background-color: black;
+    background-color: rgb(165, 232, 242);
+    text-align: center;
 }
 
 .container {
-    background-color: ;
-    
+ border: solid 2px;
+ margin: auto;
+ padding: auto;
+ box-shadow: 0px 0px 10px rgb(18, 0, 0);
+ width: 50%;
 }
 
-.menu {
+h1{
+    font-family: cursive;
+}
 
+
+button{
+background-color: rgb(0, 195, 255);
+color: rgb(11, 0, 0);
+width: 150px;
+height: 50px;
+box-shadow: 0px 0px 10px black;
 }
