--- a/templates/pinIncorrecto.html
+++ b/templates/pinIncorrecto.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background-color: red;
+            color: white;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <h1>Pin Incorrecto. Cajero Bloqueado.</h1>
