metemos mejoras en los estilos

--- a/templates/pinIncorrecto.html
+++ b/templates/pinIncorrecto.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CajeroBloqueado</title>
     <style>
         body{
             background-color: red;
             color: white;
             text-align: center;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
     </style>
 </head>
