--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,7 @@ body{
  padding: auto;
  box-shadow: 0px 0px 10px rgb(18, 0, 0);
  width: 50%;
+ background: linear-gradient( rgb(243, 244, 244), rgb(64, 169, 218));
 }
 
 h1{
@@ -22,4 +23,8 @@ color: rgb(11, 0, 0);
 width: 150px;
 height: 50px;
 box-shadow: 0px 0px 10px black;
+}
+
+p{
+    font-family: fantasy;
 }
