--- a/templates/despedida.html
+++ b/templates/despedida.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Despedida</title>
     <style>
        body{
         background-color: green;
         color: white;
         text-align: center;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
        }
     </style>
 </head>
