--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(165, 232, 242);
+    background-color: rgb(13, 150, 145);
     text-align: center;
 }
 
@@ -9,7 +9,7 @@ body{
  padding: auto;
  box-shadow: 0px 0px 10px rgb(18, 0, 0);
  width: 50%;
- background: linear-gradient( rgb(243, 244, 244), rgb(64, 169, 218));
+ background: linear-gradient( rgb(243, 244, 244), rgb(7, 214, 200));
 }
 
 h1{
@@ -18,7 +18,7 @@ h1{
 
 
 button{
-background-color: rgb(0, 195, 255);
+background-color: rgb(107, 224, 213);
 color: rgb(11, 0, 0);
 width: 150px;
 height: 50px;
@@ -26,5 +26,6 @@ box-shadow: 0px 0px 10px black;
 }
 
 p{
-    font-family: fantasy;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: rgb(8, 0, 0);
 }
